--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "server and api",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "bash db/reset_test_db.bash",
+    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000",
+    "posttest": "npm run eslint",
     "start": "node app.js",
+    "clean": "rm -rf node_modules package-lock.json",
+    "eslint": "eslint .",
     "production": "NODE_ENV='production' node app.js"
   },
   "repository": {
@@ -19,8 +23,19 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-server": "^0.12.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "selenium-webdriver": "^4.0.0-alpha.7",
     "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.3",
+    "javascript-style-guide": "^1.0.1",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0"
   }
 }
