--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "posttest": "npm run eslint",
     "start": "node app.js",
     "clean": "rm -rf node_modules package-lock.json",
-    "eslint": "eslint .",
+    "eslint": "eslint \"./**/*.js\"",
     "production": "NODE_ENV='production' node app.js"
   },
   "repository": {
